Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-104687

qmlsc miscompiles registers only set in in one of two alternative branches of execution

XMLWordPrintable

    • af335a89bd2f8b41c059c1467bac55fdaf4f2dc0 c2ca8f3ab1efcaedc7e48c834a9f8f8af2d7c078

      Analogous to QTBUG-104462, at the beginning of each function we need to initialize locals that are not overwritten in all possible branches. They should initially be undefined/void.

      The "inverse" of QTBUG-104665 can be used as an example, or even simpler:

      function a() : string {
          var x;
          return x + "";
      }
      

      What we want here is "undefined", not the empty string.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            ulherman Ulf Hermann
            ulherman Ulf Hermann
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes